Remove Docker pre-release profile